Implementações do app híbrido e dashboard
- Refatoração do dashboard e liberação;
- Implementação de mapa no app;
- Implementação de preferencias de usuário no app;
- Implementação de pontos de interesse no app;
- Refatoração, testes, validação e liberação do app no firebase hosting.

--- a/desenvolvimento/dashboard/src/app/+dashboard/dashboard.component.html
+++ b/desenvolvimento/dashboard/src/app/+dashboard/dashboard.component.html
@@ -25,7 +25,7 @@
   <div class="mdl-layout__drawer">
     <li class="mdl-list__item mdl-list__item--two-line" [routerLink]="['./home']">
       <span class="mdl-list__item-primary-content">
-        <img class="mdl-list__item-avatar  mdl-color--grey-50" src="assets/logo.png" [alt]="title">
+        <img class="mdl-list__item-avatar  mdl-color--grey-50" src="https://firebasestorage.googleapis.com/v0/b/partiu-tourism.appspot.com/o/assets%2Flogo.png?alt=media&token=d3048b50-1766-4aec-be5a-770839d787d6" [alt]="title">
         <span>Partiu!</span>
         <span class="mdl-list__item-sub-title">Painel Administrativo</span>
       </span>
