--- a/desenvolvimento/hibrido/app/pages/mapa/mapa.component.scss
+++ b/desenvolvimento/hibrido/app/pages/mapa/mapa.component.scss
@@ -1,26 +1,24 @@
-// .mapa {
+.mapa {
 
-//   ion-content {
-//     background: rgb(229, 227, 223);
-//   }
+  ion-content {
+    background: rgb(229, 227, 223);
+  }
  
-//   scroll-content {
-//     height: 100%
-//   }
+  scroll-content {
+    height: 100%
+  }
   
-//   #map  {
-//     width: 100%;
-//     height: 100%;
-//     opacity: 0;
-//     transition: opacity 150ms ease-in
-//   }
-
-// }
-.scroll {
-    height: 100%;
-}
- 
-#map {
+  #map  {
     width: 100%;
     height: 100%;
+  }
+
 }
+// .scroll {
+//     height: 100%;
+// }
+ 
+// #map {
+//     width: 100%;
+//     height: 100%;
+// }
