--- a/desenvolvimento/dashboard/src/app/+dashboard/dashboard.component.html
+++ b/desenvolvimento/dashboard/src/app/+dashboard/dashboard.component.html
@@ -32,51 +32,57 @@
     </li>
     <hr>
     <nav class="mdl-navigation">
-      <a class="mdl-navigation__link" routerLinkActive="active" [routerLink]="['./home']">
+      <a class="mdl-navigation__link" style="padding-left: 10px;" routerLinkActive="active" [routerLink]="['./home']">
         <span class="mdl-list__item-primary-content">
           <i class="material-icons mdl-list__item-icon">home</i>
           Home
         </span>
       </a>
-      <a class="mdl-navigation__link" routerLinkActive="active" [routerLink]="['./avaliacao']">
+      <a class="mdl-navigation__link" style="padding-left: 10px;" routerLinkActive="active" [routerLink]="['./avaliacao']">
         <span class="mdl-list__item-primary-content">
-          <i class="material-icons mdl-list__item-icon">add</i>
+          <i class="material-icons mdl-list__item-icon">star_rate</i>
           Avaliação
         </span>
       </a>
-      <a class="mdl-navigation__link" routerLinkActive="active" [routerLink]="['./caracteristica']">
+      <a class="mdl-navigation__link" style="padding-left: 10px;" routerLinkActive="active" [routerLink]="['./caracteristica']">
         <span class="mdl-list__item-primary-content">
-          <i class="material-icons mdl-list__item-icon">add</i>
+          <i class="material-icons mdl-list__item-icon">extension</i>
           Característica
         </span>
       </a>
-      <a class="mdl-navigation__link" routerLinkActive="active" [routerLink]="['./tipodeagenda']">
+      <a class="mdl-navigation__link" style="padding-left: 10px;" routerLinkActive="active" [routerLink]="['./caracteristica_tipo_ponto_interesse']">
         <span class="mdl-list__item-primary-content">
-          <i class="material-icons mdl-list__item-icon">add</i>
+          <i class="material-icons mdl-list__item-icon">restaurant</i>
+          Característica de Tipo de Ponto Interesse
+        </span>
+      </a>
+      <a class="mdl-navigation__link" style="padding-left: 10px;" routerLinkActive="active" [routerLink]="['./tipodeagenda']">
+        <span class="mdl-list__item-primary-content">
+          <i class="material-icons mdl-list__item-icon">date_range</i>
           Tipo de Agenda
         </span>
       </a>
-      <a class="mdl-navigation__link" routerLinkActive="active" [routerLink]="['./tipodedado']">
+      <a class="mdl-navigation__link" style="padding-left: 10px;" routerLinkActive="active" [routerLink]="['./tipodedado']">
         <span class="mdl-list__item-primary-content">
-          <i class="material-icons mdl-list__item-icon">add</i>
+          <i class="material-icons mdl-list__item-icon">playlist_add</i>
           Tipo de Dado
         </span>
       </a>
-      <a class="mdl-navigation__link" routerLinkActive="active" [routerLink]="['./tipodepontodeinteresse']">
+      <a class="mdl-navigation__link" style="padding-left: 10px;" routerLinkActive="active" [routerLink]="['./tipodepontodeinteresse']">
         <span class="mdl-list__item-primary-content">
-          <i class="material-icons mdl-list__item-icon">add</i>
+          <i class="material-icons mdl-list__item-icon">local_hotel</i>
           Tipo de Ponto de Interesse
         </span>
       </a>
-      <a class="mdl-navigation__link" routerLinkActive="active" [routerLink]="['./tipodetrasporte']">
+      <a class="mdl-navigation__link" style="padding-left: 10px;" routerLinkActive="active" [routerLink]="['./tipodetrasporte']">
         <span class="mdl-list__item-primary-content">
-          <i class="material-icons mdl-list__item-icon">add</i>
+          <i class="material-icons mdl-list__item-icon">train</i>
           Tipo de Trasporte
         </span>
       </a>
-      <a class="mdl-navigation__link" routerLinkActive="active" [routerLink]="['./trasporte']">
+      <a class="mdl-navigation__link" style="padding-left: 10px;" routerLinkActive="active" [routerLink]="['./trasporte']">
         <span class="mdl-list__item-primary-content">
-          <i class="material-icons mdl-list__item-icon">add</i>
+          <i class="material-icons mdl-list__item-icon">directions_bus</i>
           Trasporte
         </span>
       </a>
