--- a/desenvolvimento/dashboard/src/app/+tipo-agenda/tipo-agenda.component.html
+++ b/desenvolvimento/dashboard/src/app/+tipo-agenda/tipo-agenda.component.html
@@ -4,9 +4,9 @@
     [(editing)]="editing"
     [showIcone]="showIcone"
     [showDestaque]="showDestaque"
-    (create)="create($event)"
-    (remove)="remove($event)"
-    (update)="update($event)"
-    (edit)="edit($event)"
-    (clear)="clear($event)">
+    (create)="onCreate($event)"
+    (remove)="onRemove($event)"
+    (update)="onUpdate($event)"
+    (edit)="onEdit($event)"
+    (clear)="onClear($event)">
 </partiu-cadastro>
