Implementação de rota e refatoração do aplicativo.

--- a/desenvolvimento/dashboard/src/app/+avaliacao/avaliacao.component.html
+++ b/desenvolvimento/dashboard/src/app/+avaliacao/avaliacao.component.html
@@ -43,12 +43,16 @@
                         <md-hint align="end">{{descricao.characterCount}} / 100</md-hint>
                     </md-input>
                     <div>Nota: <span>{{ form.value.nota }}</span></div><br>
-                    <input 
+                    <!--<input 
                         class="mdl-slider mdl-js-slider" style="width:100%"
                         type="range" min="1" max="5" step="1"
                         required 
                         #nota 
-                        formControlName="nota">
+                        formControlName="nota">-->
+                    <partiu-rating 
+                        [rating]='form.value.nota'
+                        (rate)='onRatingClicked($event)'>
+                    </partiu-rating>
                 </md-card-content>
                 <md-card-actions align="end">
                     <button *ngIf="editing" md-raised-button (click)="onClear($event)">Cancelar</button>
