--- a/desenvolvimento/hibrido/app/pages/rota-detail/rota-detail.component.scss
+++ b/desenvolvimento/hibrido/app/pages/rota-detail/rota-detail.component.scss
@@ -1,4 +1,4 @@
-.rota-detail {
+.rota-create {
     ion-card.adv-map p {
         font-size: 0.7em !important;
     }
@@ -16,4 +16,7 @@
         background-color: #f4f4f7;
     }
 
+    .ion-label {
+        font-size: 0.875em;
+    }
 }
